@@ -15,6 +15,7 @@
 - fix some small leaks
 - faster openslide load, thanks Benjamin
 - add VInterpolate class to cplusplus binding, thanks Lovell
+- add lower-level operation cache access
 
 24/12/14 started 7.42.1
 - add gobject-2.0 to Requires: in vips and vips-cpp .pc files
